@@ -63,6 +63,17 @@ To determine the life range of variables, the code gets separated into
 pieces, called B<basic block>s. A B<basic block> starts at a label,
 which can get jumped to, and ends at a branch instruction.
 
+=head2 Special case: subroutine calls (bsr)
+
+Currently, imcc assumes, that a subroutine saves all registers on entry,
+as P6C does per B<saveall>, and thus a B<bsr> doesn't count as a branch.
+
+But there is one exception to this rule: When the target of the
+subroutine is known (the label is in the same compilation unit, and when
+no B<saveall> instruction is found in the first 5 instructions after the
+label, then the control flow from the B<bsr> call to the label and from
+the B<ret> to the next basic block is calculated.
+
 =head2 Call graph
 
 All connection between the B<basic block>s are calculated. This allows
@@ -82,6 +93,10 @@ the same register to a different variable.
 
 Variables used as B<IN> parameters must keep their parrot register
 over their usage range.
+
+Note: imcc does currently not know, that certain register operations do
+globber registers: mainly B<restoreall> and friends, which have no hint
+in core.ops, that they do what they do.
 
 =head2 Interference graph
 
